--- a/YaBoiinthePits/YaBointhePits/src/main/res/layout/activity_pit_scouter.xml
+++ b/YaBoiinthePits/YaBointhePits/src/main/res/layout/activity_pit_scouter.xml
@@ -1423,6 +1423,51 @@
                 android:background="@drawable/rounded_corners_chunk_material"
                 android:orientation="horizontal"
                 android:paddingBottom="10dp"
+                android:paddingLeft="11dp"
+                android:paddingRight="4dp"
+                android:paddingTop="10dp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight=".7"
+                    android:background="@color/white"
+                    android:maxLines="1"
+                    android:padding="5dp"
+                    android:text="Snap Some Pics"
+                    android:textColor="@color/textMedium"
+                    android:textSize="30dp"
+                    android:textStyle="italic"
+
+                    />
+
+                <Button
+                    android:id="@+id/takePic"
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:layout_weight=".3"
+                    android:background="@drawable/blue_rounded_button"
+                    android:onClick="setTakePic"
+                    android:text=">"
+                    android:textSize="30dp"
+                    android:textColor="@color/white"
+                    />
+
+            </LinearLayout> <!--Auto Delay-->
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/background_material" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_corners_chunk_material"
+                android:orientation="horizontal"
+                android:paddingBottom="10dp"
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
                 android:paddingTop="10dp"
