--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_pre_match.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_pre_match.xml
@@ -134,10 +134,10 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/map"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:background="@drawable/field"
                     tools:ignore="ContentDescription" />
 
 
