--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_qrcreator.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_qrcreator.xml
@@ -35,9 +35,10 @@
 
             <LinearLayout
                 android:id="@+id/border"
+                android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="70dp"
+                android:layout_marginBottom="30dp"
                 android:padding="5dp">
 
                 <ImageView
@@ -47,6 +48,26 @@
                     android:onClick="setGenQRCode"
 
                     tools:ignore="ContentDescription" />
+
+                <TextView
+                    android:id="@+id/qrcodey"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@color/white"
+                    android:maxLines="1"
+                    android:padding="5dp"
+                    android:text="QR Code"
+                    android:textAlignment="center"
+                    android:textColor="@color/textMedium"
+                    android:textSize="30dp"
+                    android:textStyle="italic"
+
+                    tools:ignore="HardcodedText,SpUsage" />
+
             </LinearLayout> <!--QR ImageView-->
 
             <Button
