--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_settings.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_settings.xml
@@ -34,6 +34,7 @@
             tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,SpUsage" />
 
         <LinearLayout
+            android:id="@+id/scouterPos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_corners_chunk_material"
@@ -42,6 +43,7 @@
             android:paddingLeft="11dp"
             android:paddingRight="4dp"
             android:paddingTop="10dp"
+
             tools:ignore="RtlHardcoded">
 
             <TextView
@@ -49,33 +51,32 @@
                 android:layout_height="fill_parent"
                 android:layout_gravity="center"
                 android:layout_marginRight="8dp"
-                android:layout_weight=".4"
+                android:layout_weight=".7"
                 android:background="@color/white"
-                android:maxLines="1"
-                android:padding="5dp"
-                android:text="Scouter"
-                android:textColor="@color/textMedium"
                 android:textSize="30dp"
-                android:textStyle="italic"
-
+                android:padding="5dp"
+                android:text="Position"
+                android:textColor="@color/textMedium"
                 tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />
 
             <Spinner
-                android:id="@+id/scouterList"
+                android:id="@+id/scouterPosition"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
-                android:layout_weight=".6"
-                android:entries="@array/Scouter"
-                android:spinnerMode="dialog"
-                android:prompt="@string/scouterListPrompt"
-                />
+                android:layout_weight=".5"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:entries="@array/ScouterPos"
+                android:background="@color/white"
+                tools:ignore="HardcodedText" />
 
-        </LinearLayout> <!--Scouter Selection-->
+        </LinearLayout> <!--Scouter Position-->
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/background_material"
+            android:visibility="visible"
             tools:ignore="ContentDescription" />
 
         <LinearLayout
@@ -131,67 +132,6 @@
             android:visibility="gone"
             tools:ignore="ContentDescription" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-            <LinearLayout
-                android:id="@+id/nerdStatsLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_corners_chunk_material"
-                android:orientation="horizontal"
-                android:paddingBottom="10dp"
-                android:paddingLeft="11dp"
-                android:paddingRight="4dp"
-                android:paddingTop="10dp"
-                android:visibility="gone"
-                tools:ignore="RtlHardcoded,UselessParent">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="8dp"
-                    android:layout_weight=".7"
-                    android:background="@color/white"
-                    android:maxLines="1"
-                    android:padding="5dp"
-                    android:text="Stats for Nerds"
-                    android:textStyle="italic"
-                    android:textColor="@color/textMedium"
-                    android:textSize="30dp"
-                    android:visibility="visible"
-
-                    tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />
-
-                <Button
-                    android:id="@+id/statsForNerds"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight=".3"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:background="@drawable/blue_rounded_button"
-                    android:text="Show Stats"
-                    android:visibility="visible"
-                    android:textColor="@color/white"
-                    android:onClick="setStatsForNerds"
-
-                    tools:ignore="HardcodedText" />
-
-            </LinearLayout>
-
-        </LinearLayout> <!--Stats For Nerds-->
-
-        <ImageView
-            android:id="@+id/disappearStatsForNerds"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/background_material"
-            android:visibility="gone"
-            tools:ignore="ContentDescription" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -277,7 +217,7 @@
                 android:background="@color/white"
                 android:maxLines="1"
                 android:padding="5dp"
-                android:text="8Bit Tunes"
+                android:text="Mewsic"
                 android:textColor="@color/textMedium"
                 android:textSize="30dp"
 
