--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_pre_match.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_pre_match.xml
@@ -8,6 +8,14 @@
     android:screenOrientation="portrait"
     tools:ignore="Overdraw">
 
+    <ScrollView
+        android:id="@+id/titleWindow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        tools:ignore="UselessParent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -77,7 +85,7 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="16dp"
+            android:layout_height="8dp"
             android:background="@color/background_material"
             tools:ignore="ContentDescription" />
 
@@ -87,7 +95,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_corners_chunk_material"
             android:orientation="horizontal"
-            android:paddingBottom="10dp"
+            android:paddingBottom="8dp"
             android:paddingLeft="11dp"
             android:paddingRight="4dp"
             android:paddingTop="10dp"
@@ -124,20 +132,63 @@
 
         </LinearLayout> <!--Alliance Selector-->
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:background="@color/background_material"
+            tools:ignore="ContentDescription" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corners_chunk_material"
+            android:orientation="horizontal"
+            android:paddingBottom="10dp"
+            android:paddingLeft="11dp"
+            android:paddingRight="4dp"
+            android:paddingTop="10dp"
 
-            <LinearLayout
+            tools:ignore="RtlHardcoded">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:layout_marginRight="8dp"
+                android:layout_weight=".9"
+                android:background="@color/white"
+                android:textSize="30dp"
+                android:padding="5dp"
+                android:text="Start Level"
+                android:textColor="@color/textMedium"
+                tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />
+
+            <Spinner
+                android:id="@+id/startingPos"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight=".5"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:entries="@array/startPos"
+                android:popupTheme="@style/mySpinnerItemStyle"
+                tools:ignore="HardcodedText" />
+
+        </LinearLayout> <!--Starting Position-->
+
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/background_material"
-                android:gravity="bottom|center"
+                android:gravity="top|center"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/map"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginRight="4dp"
                     tools:ignore="ContentDescription" />
 
 
@@ -165,6 +216,7 @@
                 </LinearLayout>
 
             </LinearLayout>  <!--Next-->
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="8dp"
@@ -173,4 +225,5 @@
 
 
     </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
