--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_qrcreator.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_qrcreator.xml
@@ -39,7 +39,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="30dp"
-                android:padding="5dp">
+                android:padding="5dp"
+                tools:ignore="UseCompoundDrawables">
 
                 <ImageView
                     android:id="@+id/qrCode"
