--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_post_match.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_post_match.xml
@@ -18,7 +18,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
             android:background="@color/background_material"
@@ -164,7 +164,7 @@
                     android:layout_height="wrap_content"
                     android:text="0"
                     android:textSize="25dp"
-                    />
+                    tools:ignore="HardcodedText,SpUsage" />
 
                 <SeekBar
                     android:id="@+id/defense"
@@ -223,7 +223,7 @@
                     android:textSize="15dp"
                     android:inputType="text"
                     android:padding="8dp"
-                    tools:ignore="HardcodedText" />
+                    tools:ignore="HardcodedText,SpUsage" />
 
             </LinearLayout> <!--Comments-->
             <ImageView
