--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_settings.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_settings.xml
@@ -66,7 +66,7 @@
                 android:layout_weight=".5"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
-                android:entries="@array/ScouterPos"
+                android:entries="@array/scouterPos"
                 android:popupTheme="@style/mySpinnerItemStyle"
                 tools:ignore="HardcodedText" />
 
