--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_autonteleop.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_autonteleop.xml
@@ -229,7 +229,7 @@
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
                         android:background="@color/lightBlue"
-                        android:onClick="setSRHtLSub"
+                        android:onClick="setSHtLSub"
                         android:text="-1"
                         android:textColor="@color/white"
                         android:textSize="15dp"
