Created Counter Compound View

--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/values/attrs.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/values/attrs.xml
@@ -1,6 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="Counter">
-        <attr name="title" format="string" ></attr>
+        <attr name="label" format="string" ></attr>
         <attr name="increment" format="integer" > </attr>
         <attr name="base" format="integer"></attr>
     </declare-styleable>
