--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/counter.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/counter.xml
@@ -1,20 +1,14 @@
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/rounded_corners_chunk_material"
-    android:orientation="vertical"
-    android:paddingBottom="10dp"
-    android:paddingTop="5dp"
+    android:orientation="horizontal"
+    android:clickable="true"
+    android:focusable="true"
+    android:paddingBottom="5dp"
+    android:paddingTop="5dp">
 
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp">
 
         <TextView
             android:id="@+id/label"
@@ -25,24 +19,23 @@
             android:layout_weight="2"
             android:background="@color/white"
             android:gravity="left|center"
-            android:text=""
+            android:text="@{attr.label}"
             android:textSize="25dp"
             tools:ignore="HardcodedText,NestedWeights,RtlHardcoded,SpUsage" />
 
         <Button
-            android:id="@+id/sub"
+            android:id="@+id/counterSub"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:background="@color/lightBlue"
-            android:onClick="setTCgLSub"
             android:text="-1"
             android:textColor="@color/white"
             android:textSize="15dp"
             tools:ignore="HardcodedText,SpUsage" />
 
         <TextView
-            android:id="@+id/display"
+            android:id="@+id/counterD"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_marginLeft="4dp"
@@ -55,12 +48,11 @@
             tools:ignore="HardcodedText,SpUsage" />
 
         <Button
-            android:id="@+id/add"
+            android:id="@+id/counterAdd"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:background="@color/lightBlue"
-            android:onClick="setTCgLAdd"
             android:text="+1"
             android:textColor="@color/white"
             android:textSize="15dp"
@@ -68,4 +60,3 @@
 
 
     </LinearLayout>
-</LinearLayout>
