--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/counter_view.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/counter_view.xml
@@ -6,6 +6,8 @@
     android:orientation="horizontal"
     android:clickable="true"
     android:focusable="true"
+    android:layout_marginBottom="2dp"
+    android:layout_marginTop="2dp"
     android:padding="5dp">
 
         <TextView
@@ -17,7 +19,7 @@
             android:layout_weight="2"
             android:background="@color/white"
             android:gravity="left|center"
-            android:text="sumthin"
+            android:text="default"
             android:fontFamily="@font/montserratitalic"
             android:textSize="30sp"
             tools:ignore="HardcodedText,NestedWeights,RtlHardcoded,SpUsage" />
