--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/toggle_view.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/toggle_view.xml
@@ -6,33 +6,32 @@
     android:orientation="horizontal"
     android:clickable="true"
     android:focusable="true"
-    android:padding="5dp"
-    android:paddingTop="5dp">
+    android:layout_marginBottom="2dp"
+    android:layout_marginTop="2dp"
+    android:padding="5dp">
+
     <TextView
         android:id="@+id/toggleLabelView"
         android:layout_width="0dp"
         android:layout_height="fill_parent"
-        android:layout_gravity="center"
-        android:layout_marginRight="8dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
         android:layout_weight="2.7"
         android:background="@color/white"
-        android:maxLines="1"
-        android:padding="5dp"
-        android:text=""
-        android:textColor="@color/textMedium"
-        android:textSize="30dp"
+        android:gravity="left|center"
+        android:text="default"
         android:fontFamily="@font/montserratitalic"
+        android:textSize="30sp"
+        tools:ignore="HardcodedText,NestedWeights,RtlHardcoded,SpUsage" />
 
-        tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />
-
-    <ToggleButton
+    <Switch
         android:id="@+id/toggle"
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="1.2"
-        android:background="@drawable/toggle_button_at_no_round"
-        android:textColor="@color/white"
+        android:checked="false"
         android:fontFamily="@font/montserratbold"
-
+        android:textColor="@color/white"
+        android:theme="@style/mySwitchStyle"
         tools:ignore="HardcodedText" />
 </LinearLayout>
